2001-09-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket.c (soup_address_new): #ifdef protect the
	ptrace attach/detach code until I have a chance to look at why it
	fails on some platforms.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* build/libsoup.def: Update for new exports.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.h: Fix constness for get_dav_prop
	and get_custom_prop.

2001-09-19  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-message.c (soup_message_send): Fix this to not
	return immediately after parsing the first line of the response.
	(Needed an update for the 09-07 api changes.)

2001-09-17  Vladimir Vukicevic  <vladimir@ximian.com>

	* src/libsoup/soup-socket.c, src/libsoup/soup-socket.h:
	Added soup_address_copy().  Changed soup_address_new to check
	whether the ports are the same before using a cached
	address.

2001-09-14  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-serializer.c
	(soup_serializer_get_namespace_prefix): Return const string.

	* Makefile.am (EXTRA_DIST): Install soup.m4.

	* src/libwsdl/wsdl-soap-marshal.c:
	* src/libwsdl/wsdl-typecodes.c:
	* src/soup-wsdl/wsdl-parse.c: Formatting.

2001-09-13  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-serializer.c
	(soup_serializer_get_namespace_prefix): Impl.

2001-09-12  Alex Graveley  <alex@ximian.com>

	* tests/filesys-server.c (main): Pass protocol to soup_server_new.
	* tests/server-test.c (main): Ditto.

	* src/soup-wsdl/Makefile.am (soup_wsdl_LDADD): Remove libwsdl.so
	link.

	* src/libwsdl/Makefile.am (libwsdl_build_a_SOURCES): Include
	libwsdl.so sources in libwsdl-build.a so libtool 1.3.5 doesn't
	ill.  Remove libwsdl_build_a_LIBADD.

	* src/libsoup/soup-server.c (soup_server_new): Take a SoupProtocol
	argument.

	* src/libsoup/soup-dav-server.c (move_copy): Serialize multi-status.
	(i_copy): Fix bug where directory contents were sometimes created
	before parent. Add multi-status error reporting.
