@@ -1,5 +1,10 @@
 2001-09-27  Alex Graveley  <alex@ximian.com>
 
+	* src/libsoup/soup-socket.c: Remove Glib workarounds for Windows 
+	socket io.
+
+2001-09-27  Alex Graveley  <alex@ximian.com>
+
 	* src/libsoup/soup-socket.c (soup_address_new): #ifdef protect the
 	ptrace attach/detach code until I have a chance to look at why it
 	fails on some platforms.
